# pypilot-client-protocol

./: CMakeLists.txt  README.md  library.properties
.github/workflows/: arduino.yml  ci.yml  linux.yml
docs/: protocol.md
examples/arduino/LineParserExample/: LineParserExample.ino
examples/arduino/WatchBuilderExample/: WatchBuilderExample.ino
examples/linux/: pypilot-list-values.cpp  pypilot-monitor.cpp  pypilot-set.cpp
src/: protocol_clean.hpp  pypilot_client_protocol.hpp  pypilot_client_protocol_arduino.hpp
tests/: test_protocol.cpp
